fix table cell alignment

--- a/src/Components/CardsTable/CardsTable.module.scss
+++ b/src/Components/CardsTable/CardsTable.module.scss
@@ -1,32 +1,19 @@
 .my-cards-table {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  height: 100%;
-  overflow: auto;
-}
+  border-collapse: collapse;
+  border-spacing: 0;
 
-.header {
-  font-weight: bold;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 3rem;
-  padding: 0 1rem;
-  border-bottom: 1px solid #ccc;
-}
+  thead {
+    font-weight: bold;
+    border-bottom: 1px solid #ccc;
+    background: rgba(0, 0, 0, 0.2);
+  }
 
-.row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 3rem;
-  padding: 0 1rem;
-  border-bottom: 1px solid #ccc;
+  tr {
+    border-bottom: 1px solid #ccc;
+  }
+
+  td {
+    padding: 0.5rem 1rem;
+  }
 }
